# sql-assistant

./: .env.example  .gitignore  Makefile  PROGRESS.md  README.md  SECURITY.md  pyproject.toml  vai-prompt.txt
.github/workflows/: ci.yml
.specify/extensions/: .registry
.specify/integrations/: cursor-agent.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
docs/: ARCHITECTURE.md  BENCHMARKING.md  CLEANUP_REPORT.md  CODE_DOCUMENTATION.md  COMPATIBILITY.md  DATABASE_PROFILE_GUIDE.md  GAP_REPORT.md  OPERATIONS.md  PROGRESS.md
mermaid/: Sequence.mmd  main.mmd  use-case.mmd
profiles/dbnwind/: README.md  (+11 more)
reports/: benchmark_report.md
scripts/: add_missing_docstrings.py  benchmark_questions.py  check_chroma_memory.py  clean_runtime_artifacts.ps1  clean_runtime_artifacts.sh  dev.py  generate_examples.py  generate_profile_from_schema.py  seed_memory.py  validate_profile.py
tests/: conftest.py  test_activity_recorder.py  test_agent.py  test_api_query.py  test_api_v1_chat.py  test_api_v1_profile.py  test_api_v1_status.py  test_benchmark.py  test_bootstrap_startup.py  test_cached_embedding.py  test_chat_metadata.py  test_chat_response_presentation.py  test_chat_vai_structured_extract.py  test_chunking.py  test_cleanup_contract.py  test_connection.py  test_context_enhancer.py  test_example_generator.py  test_explain_schema_tool.py  test_generate_profile_cli.py  test_guarded_chat_handler.py  test_health.py  test_logging_config.py  test_memory_factory.py  test_mssql_runner.py  test_multi_search.py  test_no_legacy_runtime.py  test_no_vanna_stock_ui_routes.py  test_openai_compatible_service.py  test_openrouter_service.py  test_pii_group_access.py  test_pii_policy.py  test_profile_generator.py  test_profile_loader.py  test_profile_models.py  test_profile_search_tool.py  test_prompt_injection.py  test_rate_limiting.py  test_reload_makefile.py  test_run_sql_tool_contract.py  (+22 more)
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+195 files in other folders)
